[package]
name = "utuntap"
version = "0.1.2"
authors = ["siegfried <zhiqiang.lei@gmail.com>"]
edition = "2018"
homepage = "https://github.com/siegfried/utuntap"
repository = "https://github.com/siegfried/utuntap.git"
readme = "README.md"
license = "MIT"
description = "A low level Rust library for Tun/Tap devices."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
travis-ci = { repository = "siegfried/utuntap", branch = "master" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "~0.2"
nix = "~0.17"

[dev-dependencies]
etherparse = "~0.9"
serial_test = "~0.4"