[package]
name = "utuntap"
version = "0.2.5"
authors = ["siegfried <zhiqiang.lei@gmail.com>"]
edition = "2021"
homepage = "https://github.com/siegfried/utuntap"
repository = "https://github.com/siegfried/utuntap.git"
readme = "README.md"
license = "MIT"
description = "A low level Rust library for Tun/Tap devices."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
travis-ci = { repository = "siegfried/utuntap", branch = "master" }

[target.'cfg(target_os = "linux")'.dependencies]
nix = "~0.24.1"

[dependencies]
libc = "~0.2.126"

[dev-dependencies]
etherparse = "~0.10.1"
serial_test = "~0.7"